# Evidex

./: .env.example  .env.local.new  .gitignore  .npmrc  .vercelignore  DEMO_PRESENTATION.md  DEPLOYMENT_FIX.md  DEPLOYMENT_SUCCESS.md  ENHANCED_WORKFLOW.md  KIIT_COMPLETE_PROJECT_REPORT.md  KIIT_PROJECT_REPORT.md  LIVE_DEMO_GUIDE.md  PARACHAIN_SETUP.md  PRODUCTION_DEPLOYMENT_STATUS.md  PRODUCTION_HOSTING_GUIDE.md  PRODUCTION_SETUP.md  QUICK_DEPLOYMENT.md  README.md  README_NEW.md  TESTING_GUIDE.md  VERCEL_DEPLOYMENT_STATUS.md  deploy-demo.sh  deploy-production.sh  deploy-vercel.sh  docker-compose.parachain.minimal.yml  docker-compose.parachain.simple.yml  docker-compose.parachain.yml  docker-compose.production.yml  docker-compose.yml  fix-admin.ts  nginx.conf  package.json  pnpm-lock.yaml  setup-production-wizard.sh  setup-production.sh  show-blocks.mjs  start_evidex.sh  stop_evidex.sh  test-octal.ts  test_live.ts  (+2 more)
.github/workflows/: ci.yml
apps/mobile/: App.tsx  app.json  package.json
apps/mobile/app/: chats.tsx  index.tsx
apps/mobile/app/chat/: [id].tsx
apps/web/: .vercelignore  Dockerfile  fix-admin.mjs  get-address.mjs  middleware.ts  next.config.mjs  package.json  tsconfig.json
apps/web/.next_stale_1773680366/: app-path-routes-manifest.json  next-server.js.nft.json  react-loadable-manifest.json  routes-manifest.json
apps/web/.next_stale_1773680366/server/: middleware-manifest.json  middleware-react-loadable-manifest.js  server-reference-manifest.json
apps/web/app/: globals.css  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/explorer/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/components/: admin-analytics-dashboard.tsx  signin-form.tsx  signup-form.tsx  top-nav.tsx  upload-form.tsx  user-analytics-dashboard.tsx  verify-form.tsx
apps/web/lib/: session.ts
contracts/: hardhat.config.ts  package.json  tsconfig.json
contracts/.tmp/node-compile-cache/v22.19.0-arm64-2b4477fa-501/: 0048e7d6  014c0322  016bbd34  02217820  022e6624  023a18f9  026ed798  027b907e  035af4a4  03cf413f  03e7249c  0404900a  0486264a  0488c06d  0505376d  053bf7d0  055116de  058680d6  05ad7f9c  06d7f879  074ca597  07896a0a  08e82f9f  0a1c55cc  0a2976d5  0a675c9e  0ccaec3b  0cd3432c  0da28244  0e07677c  0ec7154b  0fc1a3fd  10a3911b  10b86f16  11178b4b  1178a5fa  11a4724e  11eb91d7  (+538 more)
contracts/contracts/: EvidenceRegistry.sol  EvidexLightClient.sol
contracts/contracts/utils/: MerkleProof.sol
contracts/scripts/: deploy.ts
contracts/test/: EvidenceRegistry.test.ts
contracts/typechain-types/: EvidenceRegistry.ts
contracts/typechain-types/factories/: EvidenceRegistry__factory.ts
deploy/: tsconfig.base.json
deploy-minimal/: package.json  tailwind.config.ts
deploy-minimal/app/upload/: page.tsx
deploy-minimal/components/: wallet-auth-button.tsx
deploy-minimal/database/: tsconfig.json
deploy-minimal/database/prisma/: schema.prisma
deploy-minimal/database/src/: client.ts
deploy-minimal/lib/: serializers.ts  wagmi.ts
deploy-simple/: Dockerfile
deploy-simple/app/: globals.css
deploy-simple/app/explorer/: page.tsx
deploy-simple/app/verify/: page.tsx
deploy-simple/components/: chain-management-dashboard.tsx  top-nav.tsx  verify-form.tsx
deploy/web/.next_stale_1773680366/: BUILD_ID  app-build-manifest.json  next-minimal-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
deploy/web/app/: layout.tsx  page.tsx
deploy/web/components/: signin-form.tsx  signup-form.tsx
parachain/: Cargo.complex.toml  Cargo.toml  Dockerfile  README.md  zombienet.toml
parachain/chainspec/: evidex-parachain.json
parachain/pallets/evidence/: Cargo.toml
parachain/pallets/evidence/src/: lib.rs
parachain/pallets/pallet-evidence/: Cargo.toml
parachain/pallets/pallet-evidence/src/: benchmarking.rs  functions.rs  functions.rs.bak  lib.rs  lib.rs.bak  types.rs  value_query_impl.rs
parachain/src/: lib.rs  runtime.rs  runtime.rs.bak
scripts/: bootstrap.sh  deploy-parachain.sh  deploy-polygon.sh  deploy-production-simple.sh  deploy-production.sh  dev-web.sh  e2e-validation.ts  generate-secrets.sh  host-evidex.sh  monitor-production.sh  run-web.sh  setup-parachain.sh  setup-ssl.sh
(+194 files in other folders)
