[package]
name = "arkashri-parachain"
version = "0.1.0"
authors = ["Arkashri Team"]
edition = "2021"
description = "Arkashri parachain for digital evidence management"

[dependencies]
# Basic Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

# Basic pallets
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

# Local pallets
pallet-evidence = { path = "pallets/pallet-evidence" }

# Utilities
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
scale-info = { version = "2.0.0", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

[features]
default = []
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-evidence/runtime-benchmarks",
]
